created all the routes for the products

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,6 +1,6 @@
-$color-primary: #0c4b7d;
-$color-primary-light: #eaeded;
-$color-primary-dark: #252525;
-$color-link: rgba(255, 255, 255, 0.5);
-
-//nice blue color #0088cc;
+//$color-primary: #0c4b7d;
+//$color-primary-light: #eaeded;
+//$color-primary-dark: #252525;
+//$color-link: rgba(255, 255, 255, 0.5);
+//
+////nice blue color #0088cc;
