--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,94 +1,3 @@
 <app-header></app-header>
-<div class="container-fluid pt-0 p-0 main">
-  <!-- MAIN CONTENT START -->
-  <div class="row">
-    <div
-      class="col-md-3 text-center order-2 order-md-1 text-md-left  main__products"
-    >
-      <app-side-nav></app-side-nav>
-    </div>
-    <div class="col-md-9 order-1 mb-3 order-md-2 main__carousel">
-      <app-products></app-products>
-    </div>
-  </div>
-  <section>
-    <div class="text-center mt-2 p-2">
-      <h1 class="py-4 text-light featured">FEATURED BEST SELLERS</h1>
-      <div class="row m-2">
-        <div class="col-md-3 p-1">
-          <div class="card">
-            <img
-              src="../../assets/img/stretchWrap.png"
-              alt="Stretch Wrap"
-              style="height: 25rem;"
-            />
-            <div class="featured__body text-uppercase">
-              <h2>
-                <a
-                  href="#"
-                  class="btn featured__items py-4 btn-lg btn-block text-light"
-                  >stretch wrap</a
-                >
-              </h2>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3 p-1">
-          <div class="card">
-            <img
-              src="../../assets/img/sealingTape.png"
-              alt="Sealing Tape"
-              style="height: 25rem;"
-            />
-            <div class="featured__body text-uppercase">
-              <h2>
-                <a
-                  href="#"
-                  class="btn featured__items py-4 btn-lg btn-block text-light"
-                  >sealing tape</a
-                >
-              </h2>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3 p-1">
-          <div class="card">
-            <img
-              src="../../assets/img/mailers.png"
-              alt="Mailers"
-              style="height: 25rem;"
-            />
-            <div class="featured__body text-uppercase">
-              <h2>
-                <a
-                  href="#"
-                  class="btn featured__items py-4 btn-lg btn-block text-light"
-                  >mailers</a
-                >
-              </h2>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3 p-1">
-          <div class="card">
-            <img
-              src="../../assets/img/bubblePeanuts.png"
-              alt="Bubble / Peanuts"
-              style="height: 25rem;"
-            />
-            <div class="featured__body text-uppercase">
-              <h2>
-                <a
-                  href="#"
-                  class="btn featured__items py-4 btn-lg btn-block text-light"
-                  >bubble / peanuts</a
-                >
-              </h2>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <app-footer></app-footer>
-</div>
+<app-home></app-home>
+<app-footer></app-footer>
