back to creating the app. the client has opted out of a full stack app and decided to go for the angular front end

--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -1,40 +1,48 @@
-<!--<div class="footer text-center">-->
-<!--  <div class="row">-->
-<!--    <div class="col-md-4 mb-5 text-center text-md-left ml-md-4">-->
-<!--      <img-->
-<!--        src="../../../assets/img/jpack-logo.jpg"-->
-<!--        alt="jpackInternational"-->
-<!--        width="244"-->
-<!--        height="83"-->
-<!--      />-->
-<!--    </div>-->
-<!--    <div class="col-6 col-md col-12">-->
-<!--      <h3>contact us</h3>-->
-<!--      <ul class="list-unstyled">-->
-<!--        <li>-->
-<!--          19789 Harrison Ave. City of Industry, Ca. 91789-->
-<!--        </li>-->
-<!--        <li>-->
-<!--          Phone: 909.598.7229 | Fax: 909.598.089-->
-<!--        </li>-->
-<!--        <li>-->
-<!--          questions@jpackusa.com-->
-<!--        </li>-->
-<!--      </ul>-->
-<!--    </div>-->
-<!--    <div class="col-6 col-md col-12">-->
-<!--      <h3>information</h3>-->
-<!--      <ul class="list-unstyled text-small">-->
-<!--        <li>-->
-<!--          about us-->
-<!--        </li>-->
-<!--        <li>-->
-<!--          success stories-->
-<!--        </li>-->
-<!--        <li>-->
-<!--          faq-->
-<!--        </li>-->
-<!--      </ul>-->
-<!--    </div>-->
-<!--  </div>-->
-<!--</div>-->
+
+<!--Footer-->
+<footer class="page-footer text-center stylish-color-dark text-md-left pt-4 mt-5">
+  <!--Footer Links-->
+  <div class="container-fluid">
+    <div class="row">
+      <!--First column-->
+      <div class="col-md-3">
+        <h5 class="text-uppercase font-weight-bold mb-4">Jpack International</h5>
+        <p>
+          buy us fuck you
+        </p>
+      </div>
+      <!--/.First column-->
+
+      <hr class="w-100 clearfix d-md-none"/>
+      <hr class="w-100 clearfix d-md-none"/>
+
+      <!--Fourth column-->
+      <div class="col-md-2 mx-auto">
+        <h5 class="text-uppercase font-weight-bold mb-4">Browse</h5>
+        <ul class="list-unstyled">
+          <li><a href="#!">contact</a></li>
+          <li><a href="#!">Delivery</a></li>
+          <li><a href="#!">FAQ</a></li>
+          <li><a href="#!">Testimonies</a></li>
+        </ul>
+      </div>
+      <!--/.Fourth column-->
+    </div>
+  </div>
+  <!--/.Footer Links-->
+
+  <!--Copyright-->
+  <div class="footer-copyright py-3 text-center">
+    <div class="container-fluid">
+      © 2019 Copyright: Jpack International
+    </div>
+  </div>
+  <!--/.Copyright-->
+</footer>
+<!--/.Footer-->
+
+
+
+
+
+
