--- a/src/app/navbar/about/about.component.html
+++ b/src/app/navbar/about/about.component.html
@@ -1,3 +1,89 @@
-<p>
-  about works!
-</p>
+<main>
+  <div class="container">
+<!-- Section: Blog v.1 -->
+<section>
+
+  <!-- Section heading -->
+  <h2 class="h1-responsive font-weight-bold text-center my-3">About Us</h2>
+  <!-- Section description -->
+  <p class="text-center w-responsive lead mx-auto mb-3">Welcome to JPack International, we hope to bring you nothing but
+    the best for you and your customers</p>
+
+  <!-- Grid row -->
+  <div class="row">
+
+    <!-- Grid column -->
+    <div class="col-lg-5 d-flex align-items-center">
+
+      <!-- Featured image -->
+      <div class="view overlay rounded z-depth-2 mb-lg-0 mb-3">
+        <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Others/img%20(27).jpg" alt="Sample image">
+        <a>
+          <div class="mask rgba-white-slight"></div>
+        </a>
+      </div>
+
+    </div>
+    <!-- Grid column -->
+
+    <div class="col-lg-7">
+      <h2 class="font-weight-bold my-3"><strong>Our History</strong></h2>
+      <p class="lead">JPack Int’l Inc. is a family-owned business in the City of Industry that is a master
+        distributor of packaging and shipping materials. Established in 1998, we have grown through the years because of our company’s focus on high quality products, excellent services, and low prices. As a family business, our employees and founder pay extreme attention to detail and will do everything in their power to satisfy your demands. It is the norm for our founder to personally visit and serve customers and for our employees to know consumers by name and accommodate to individual needs. We have members of the JPack family who speak fluent Mandarin as well as English to meet your communication needs and make your company’s shipping process as convenient, hassle-free, and low-cost as can be.</p>
+    </div>
+  </div>
+
+  <hr class="my-4">
+
+  <!-- Grid row -->
+  <div class="row">
+
+    <!-- Grid column -->
+    <div class="col-lg-5 d-flex align-items-center">
+
+      <!-- Featured image -->
+      <div class="view overlay rounded z-depth-2 mb-lg-0 mb-3">
+        <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Others/images/43.jpg" alt="Sample image">
+        <a>
+          <div class="mask rgba-white-slight"></div>
+        </a>
+      </div>
+
+    </div>
+    <!-- Grid column -->
+
+    <div class="col-lg-7">
+      <h2 class="font-weight-bold my-3"><strong>Our Commitment</strong></h2>
+      <p class="lead">Receive your orders the same day or the next day! JPack provides next-day FREE truck shipping services for orders over $300, within a 35-mile radius of our company & for orders over $500 within a 50-mile radius. We ship to Orange County, Los Angeles County, San Bernardino Valley County, Riverside County & more! Customers can also do same day will-calls for the “specialty products,” that need no preparation. This feature is incredibly valuable to our customers because they are able to receive their purchases at top speed.</p>
+    </div>
+  </div>
+
+  <hr class="my-4">
+
+
+  <!-- Grid row -->
+  <div class="row">
+
+    <!-- Grid column -->
+    <div class="col-lg-5 d-flex align-items-center">
+
+      <!-- Featured image -->
+      <div class="view overlay rounded z-depth-2 mb-lg-0 mb-3">
+        <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Others/images/13.jpg" alt="Sample image">
+        <a>
+          <div class="mask rgba-white-slight"></div>
+        </a>
+      </div>
+
+    </div>
+    <!-- Grid column -->
+
+    <div class="col-lg-7">
+      <h2 class="font-weight-bold my-3"><strong>Customer Service</strong></h2>
+      <p class="lead">Customers receive our strongest commitment to accommodate to their needs and to exceed their expectations with high quality products and unrivaled customer service. As a family-owned business, we can accommodate best to serve your needs; with that said, it is rather common for our founder to visit and serve customers in person and our employees to know consumers by name while paying attention to individual needs. Received a damaged or defect product from us? Received a lower quotation? Confused about what product and which dimensions to order? Whatever the question or problem, contact us and our employees will surely do everything in his or her power to assist you with your problem.</p>
+    </div>
+  </div>
+
+</section>
+  </div>
+</main>
