--- a/src/app/navbar/home/home.component.html
+++ b/src/app/navbar/home/home.component.html
@@ -28,7 +28,7 @@
             <h3>
               QUALITY PRODUCTS
             </h3>
-            <div class="lead">
+            <div class="lead resp">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam
               assumenda deserunt earum expedita facilis harum hic inventore
               mollitia non quaerat.
@@ -38,7 +38,7 @@
             <h3>
               QUALITY PRODUCTS
             </h3>
-            <div class="lead">
+            <div class="lead resp">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam
               assumenda deserunt earum expedita facilis harum hic inventore
               mollitia non quaerat.
@@ -55,7 +55,7 @@
             <h3>
               WHOLESALE PRICES
             </h3>
-            <div class="lead">
+            <div class="lead resp">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam
               assumenda deserunt earum expedita facilis harum hic inventore
               mollitia non quaerat.
@@ -65,7 +65,7 @@
             <h3>
               SUPERIOR QUALITY
             </h3>
-            <div class="lead">
+            <div class="lead resp">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam
               assumenda deserunt earum expedita facilis harum hic inventore
               mollitia non quaerat.
@@ -75,7 +75,7 @@
             <h3>
               FREE SHIPPING
             </h3>
-            <div class="lead">
+            <div class="lead resp">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam
               assumenda deserunt earum expedita facilis harum hic inventore
               mollitia non quaerat.
