--- a/src/app/navbar/home/home.component.scss
+++ b/src/app/navbar/home/home.component.scss
@@ -1,8 +1,21 @@
 @import "~node_modules/rfs/scss";
-//
-///////////////
-//// Theming //
-///////////////
+@import "/Users/jesusgonzalez/Documents/jpackInternational/node_modules/rfs/scss.scss";
+
+.resp {
+  @include responsive-font-size(1rem);
+  margin: 0;
+}
+
+h3 {
+  @include responsive-font-size(1.5rem);
+}
+
+
+
+
+/////////////
+// Theming //
+/////////////
 //html {
 //  background: #DDD;
 //}
