added all of the bag product data as well as the UI

--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -1,48 +1,48 @@
-
-<!--Footer-->
-<footer class="page-footer text-center stylish-color-dark text-md-left pt-4 mt-5">
-  <!--Footer Links-->
+<footer
+  class="page-footer text-center stylish-color-dark text-md-left pt-2 mt-5"
+>
   <div class="container-fluid">
     <div class="row">
-      <!--First column-->
-      <div class="col-md-3">
-        <h5 class="text-uppercase font-weight-bold mb-4">Jpack International</h5>
-        <p>
-          buy us fuck you
-        </p>
+      <div class="col-md-3 mb-3 my-auto">
+        <mdb-navbar-brand>
+          <div class="logo-wrapper waves-light">
+            <a routerLink="/"
+              ><img
+                src="../../../assets/img/jpack-logo.jpg"
+                class="img-fluid"
+                alt=""
+            /></a>
+          </div>
+        </mdb-navbar-brand>
       </div>
-      <!--/.First column-->
-
-      <hr class="w-100 clearfix d-md-none"/>
-      <hr class="w-100 clearfix d-md-none"/>
-
-      <!--Fourth column-->
-      <div class="col-md-2 mx-auto">
-        <h5 class="text-uppercase font-weight-bold mb-4">Browse</h5>
+      <div class="col-md-3 mt-3 text-center mx-auto">
+        <h5 class="text-uppercase font-weight-bold">Information</h5>
         <ul class="list-unstyled">
-          <li><a href="#!">contact</a></li>
-          <li><a href="#!">Delivery</a></li>
-          <li><a href="#!">FAQ</a></li>
-          <li><a href="#!">Testimonies</a></li>
+          <li routerLink="contact"><a>Contact</a></li>
+          <li routerLink="delivery"><a>Delivery</a></li>
+          <li routerLink="faq"><a>FAQ</a></li>
+          <li routerLink="testimony"><a>Testimonies</a></li>
         </ul>
       </div>
-      <!--/.Fourth column-->
+
+      <div class="col-md-3 my-3 text-center mx-auto">
+        <h5 class="text-uppercase font-weight-bold">Contact Us</h5>
+        <p>
+          19789 Harrison Ave. City of Industry, Ca 91789
+        </p>
+        <p>
+          Phone: 909.598.7229 | Fax: 909.598.0879
+        </p>
+        <p>
+          questions@jpackusa.com
+        </p>
+      </div>
     </div>
   </div>
-  <!--/.Footer Links-->
 
-  <!--Copyright-->
   <div class="footer-copyright py-3 text-center">
     <div class="container-fluid">
       © 2019 Copyright: Jpack International
     </div>
   </div>
-  <!--/.Copyright-->
 </footer>
-<!--/.Footer-->
-
-
-
-
-
-
