--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -3,7 +3,7 @@
   <!-- Sidebar navigation -->
   <mdb-side-nav
     #sidenav
-    class="sn-bg-1 fixed"
+    class=" fixed"
     [sidenavBreakpoint]="992"
     [fixed]="true"
   >
@@ -64,15 +64,15 @@
               </mdb-accordion-item-head>
               <mdb-accordion-item-body>
                 <ul>
-                  <li><a href="#" mdbWavesEffect>Anti Static Bags</a></li>
-                  <li><a href="#" mdbWavesEffect>Bubble Pouches</a></li>
-                  <li><a href="#" mdbWavesEffect>Clear Poly Bags</a></li>
-                  <li><a href="#" mdbWavesEffect>Poly Bag Sealer</a></li>
-                  <li><a href="#" mdbWavesEffect>Polypropylene Bags</a></li>
-                  <li><a href="#" mdbWavesEffect>Poly Tubing</a></li>
-                  <li><a href="#" mdbWavesEffect>Reclosable Bags</a></li>
-                  <li><a href="#" mdbWavesEffect>Static Shielding Bags</a></li>
-                  <li><a href="#" mdbWavesEffect>Vacuum Bags</a></li>
+                  <li routerLink="anti-static-bags"><a mdbWavesEffect>Anti Static Bags</a></li>
+                  <li routerLink="bubble-pouches-bags"><a mdbWavesEffect>Bubble Pouches</a></li>
+                  <li routerLink="clear-poly-bags"><a mdbWavesEffect>Clear Poly Bags</a></li>
+                  <li routerLink="clear-reclosable-bags"><a mdbWavesEffect>Clear Reclosable Bags</a></li>
+                  <li routerLink="poly-bag-sealer"><a mdbWavesEffect>Poly Bag Sealer</a></li>
+                  <li routerLink="polypropylene-bags"><a mdbWavesEffect>Polypropylene Bags</a></li>
+                  <li routerLink="poly-tubing"><a mdbWavesEffect>Poly Tubing</a></li>
+                  <li routerLink="static-shielding-bags"><a mdbWavesEffect>Static Shielding Bags</a></li>
+                  <li routerLink="vacuum-bags"><a mdbWavesEffect>Vacuum Bags</a></li>
                 </ul>
               </mdb-accordion-item-body>
             </mdb-accordion-item>
