--- a/src/app/navbar/contact-us/contact-us.component.html
+++ b/src/app/navbar/contact-us/contact-us.component.html
@@ -1,140 +1,139 @@
 <main>
-  <!-- Section: Contact v.3 -->
-  <section class="contact-section my-5">
+  <div class="container flex-center px-0 col-md-12">
+    <div class="row ">
+      <img
+        src="../../../assets/img/AutoIDCard.jpg"
+        class="img-fluid"
+        alt="Jpack HQ"
+      />
+    </div>
+  </div>
 
-    <!-- Form with header -->
+  <section class="contact-section my-3">
     <div class="card">
-
-      <!-- Grid row -->
       <div class="row">
-
-        <!-- Grid column -->
         <div class="col-lg-8">
-
           <div class="card-body form">
-
             <!-- Header -->
-            <h3 class="mt-4"><i class="fas fa-envelope pr-2"></i>Write to us:</h3>
-
-            <!-- Grid row -->
+            <h3 class="mt-4">
+              <i class="fas fa-envelope pr-2"></i>Contact Us:
+            </h3>
             <div class="row">
-
-              <!-- Grid column -->
               <div class="col-md-6">
                 <div class="md-form mb-0">
-                  <input type="text" id="form-contact-name" class="form-control" mdbInput>
+                  <input
+                    type="text"
+                    id="form-contact-name"
+                    class="form-control"
+                    mdbInput
+                  />
                   <label for="form-contact-name" class="">Your name</label>
                 </div>
               </div>
-              <!-- Grid column -->
-
-              <!-- Grid column -->
               <div class="col-md-6">
                 <div class="md-form mb-0">
-                  <input type="text" id="form-contact-email" class="form-control" mdbInput>
+                  <input
+                    type="text"
+                    id="form-contact-email"
+                    class="form-control"
+                    mdbInput
+                  />
                   <label for="form-contact-email" class="">Your email</label>
                 </div>
               </div>
-              <!-- Grid column -->
-
             </div>
-            <!-- Grid row -->
-
-            <!-- Grid row -->
             <div class="row">
-
-              <!-- Grid column -->
               <div class="col-md-6">
                 <div class="md-form mb-0">
-                  <input type="text" id="form-contact-phone" class="form-control" mdbInput>
+                  <input
+                    type="text"
+                    id="form-contact-phone"
+                    class="form-control"
+                    mdbInput
+                  />
                   <label for="form-contact-phone" class="">Your phone</label>
                 </div>
               </div>
-              <!-- Grid column -->
-
-              <!-- Grid column -->
               <div class="col-md-6">
                 <div class="md-form mb-0">
-                  <input type="text" id="form-contact-company" class="form-control" mdbInput>
-                  <label for="form-contact-company" class="">Your company</label>
+                  <input
+                    type="text"
+                    id="form-contact-company"
+                    class="form-control"
+                    mdbInput
+                  />
+                  <label for="form-contact-company" class=""
+                    >Your company</label
+                  >
                 </div>
               </div>
-              <!-- Grid column -->
-
             </div>
-            <!-- Grid row -->
-
-            <!-- Grid row -->
             <div class="row">
-
-              <!-- Grid column -->
               <div class="col-md-12">
                 <div class="md-form mb-0">
-                <textarea type="text" id="form-contact-message" class="form-control md-textarea" rows="3"
-                          mdbInput></textarea>
+                  <textarea
+                    type="text"
+                    id="form-contact-message"
+                    class="form-control md-textarea"
+                    rows="3"
+                    mdbInput
+                  ></textarea>
                   <label for="form-contact-message">Your message</label>
-                  <a mdbBtn floating="true" size="lg" color="blue" mdbWavesEffect>
+                  <a
+                    mdbBtn
+                    floating="true"
+                    size="lg"
+                    color="blue"
+                    mdbWavesEffect
+                  >
                     <i class="far fa-paper-plane"></i>
                   </a>
                 </div>
               </div>
-              <!-- Grid column -->
-
             </div>
-            <!-- Grid row -->
-
           </div>
-
         </div>
-        <!-- Grid column -->
-
-        <!-- Grid column -->
         <div class="col-lg-4">
-
-          <div class="card-body contact text-center h-100 white-text">
-
-            <h3 class="my-4 pb-2">Contact information</h3>
+          <div class="card-body px-4 contact text-center h-100 white-text">
+            <h4 class="my-3">Contact information</h4>
             <ul class="text-lg-left list-unstyled ml-4">
               <li>
-                <p><i class="fas fa-map-marked pr-2"></i>New York, 94126, USA</p>
+                <p class="mb-0">
+                  <i class="fas fa-map-marked pr-2"></i>19789 Harrison Ave.
+                </p>
+                <p>City of Industry, CA 91789</p>
               </li>
               <li>
-                <p><i class="fas fa-phone pr-2"></i>+ 01 234 567 89</p>
+                <p><i class="fas fa-phone pr-2"></i>909.598.7229</p>
               </li>
               <li>
-                <p><i class="fas fa-envelope pr-2"></i>contact@example.com</p>
-              </li>
-            </ul>
-            <hr class="hr-light my-4">
-            <ul class="list-inline text-center list-unstyled">
-              <li class="list-inline-item">
-                <a class="p-2 fa-lg tw-ic">
-                  <i class="fab fa-twitter"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a class="p-2 fa-lg li-ic">
-                  <i class="fab fa-linkedin-in"> </i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a class="p-2 fa-lg ins-ic">
-                  <i class="fab fa-instagram"> </i>
-                </a>
+                <p><i class="fas fa-envelope pr-2"></i>jeffrey@jpackusa.com</p>
               </li>
             </ul>
 
+            <hr class="hr-light my-4" />
+
+            <ul class="text-lg-left list-unstyled ml-4">
+              <li>
+                <h6 class="font-weight-bold">General Inquiry:</h6>
+                <p>questions@jpackusa.com</p>
+              </li>
+              <li>
+                <h6 class="font-weight-bold">Orders:</h6>
+                <p>orders@jpackusa.com</p>
+              </li>
+              <li>
+                <h6 class="font-weight-bold">Quotations:</h6>
+                <p>quotations@jpackusa.com</p>
+              </li>
+              <li>
+                <h5 class="font-weight-bold">Hours of Operation:</h5>
+                <p>Monday - Friday: 8:30 AM - 5:30 PM</p>
+              </li>
+            </ul>
           </div>
-
         </div>
-        <!-- Grid column -->
-
       </div>
-      <!-- Grid row -->
-
     </div>
-    <!-- Form with header -->
-
   </section>
-  <!-- Section: Contact v.3 -->
 </main>
