--- a/src/app/products/bags/anti-static-bags/anti-static-bags.component.html
+++ b/src/app/products/bags/anti-static-bags/anti-static-bags.component.html
@@ -1,474 +1,112 @@
-<!-- START SIDE NAV-->
-<div class="accordionNav order-1" id="accordionProducts">
-  <div class="card">
-    <div
-      class="card-header"
-      style="background-color: #0C4B7D; border-radius:.5rem .5rem 0 0;"
-    >
-      <h2 class="text-uppercase text-center" style="color: white;">
-        products
-      </h2>
-    </div>
-  </div>
+<!--suppress ALL -->
+<main>
+  <div class="container">
+    <div class="row">
+      <div class="container mb-5 col-12 col-lg-6">
+        <div class="row justify-content-center">
+          <img
+            class="z-depth-1 rounded"
+            style="width: 405px; height: 405px;"
+            src="../../../../assets/img/anti-static-bag.jpg"
+            alt="Anti Static Bag"
+            data-toggle="modal"
+            data-target="#basicExample"
+            (click)="frame.show()"
+            mdbWavesEffect
+          />
+          <div
+            mdbModal
+            #frame="mdbModal"
+            class="modal fade"
+            id="frameModalTop"
+            role="dialog"
+            aria-labelledby="myModalLabel"
+            aria-hidden="true"
+          >
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <!-- Image -->
+                <div class="modal-body d-flex justify-content-center">
+                  <img
+                    src="../../../../assets/img/anti-static-bag.jpg"
+                    alt=""
+                  />
+                </div>
+                <!-- Button -->
+                <div class="modal-footer">
+                  <button
+                    type="button"
+                    mdbBtn
+                    color="primary"
+                    class="waves-light"
+                    mdbWavesEffect
+                    data-dismiss="modal"
+                    (click)="frame.hide()"
+                  >
+                    Close
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
-  <div class="card">
-    <div
-      class="card-header collapsed"
-      data-toggle="collapse"
-      data-target="#collapse1"
-      aria-controls="collapse1"
-      aria-expanded="false"
-      id="product1"
-    >
-      <h5>
-        <button
-          class="btn btn-link collapsed"
-          type="button"
-          data-toggle="collapse"
-          data-target="#collapse1"
-          aria-expanded="false"
-          aria-controls="collapse1"
-        >
-          BAGS
-        </button>
-        <i class="fas fa-chevron-right fa-2x float-right d-none d-md-block"></i>
-      </h5>
-    </div>
-    <div
-      id="collapse1"
-      class="collapse hide"
-      aria-labelledby="product1"
-      data-parent="#accordionProducts"
-    >
-      <div class="card-body">
-        <ul class="accordionNav__list list-group">
-          <li class="list-group-item"><a href="#">anti static bags</a></li>
-          <li class="list-group-item"><a href="#">bubble pouches</a></li>
-          <li class="list-group-item"><a href="#">clear poly bag</a></li>
-          <li class="list-group-item"><a href="#">clear reclosable bag</a></li>
-          <li class="list-group-item"><a href="#">poly bag sealer</a></li>
-          <li class="list-group-item"><a href="#">polypropylene bags</a></li>
-          <li class="list-group-item"><a href="#">poly tubing</a></li>
-          <li class="list-group-item"><a href="#">static shielding bags</a></li>
-          <li class="list-group-item"><a href="#">vacuum bags</a></li>
-        </ul>
+      <div class="card w-100 mb-5 col-12 col-lg-6">
+        <div class="card-body">
+          <h3 class="card-title">ANTI STATIC BAGS</h3>
+          <p class="card-text lead">
+            Anti-static bags are used for protecting electronics from static
+            electricity. Works by dissipating ions from their surfaces.
+          </p>
+          <p class="card-text lead">
+            <strong>Reliable:</strong> All of our anti-static bags meet or
+            exceed industrial standards.
+          </p>
+          <p class="card-text lead">
+            <strong>Sizes:</strong> All of the product sizes are width x length
+            in inches.
+          </p>
+          <p class="card-text lead">
+            <strong>Weight:</strong> All of the product weight are in pounds per
+            1000 bags.
+          </p>
+        </div>
       </div>
+      <table class="table table-striped table-hover">
+        <thead>
+          <tr
+            style="text-align: center; background-color: #0c4b7d; color: white;"
+          >
+            <th scope="col" style="padding-right: 0">PRODUCT #</th>
+            <th scope="col" style="padding-right: 2px;">DURABILITY</th>
+            <th scope="col" style="padding-left: 1px">SIZE W x L</th>
+            <th scope="col" style="padding-right: 2px">WEIGHT</th>
+            <th scope="col" style="padding-right: 2px">BAG/CASE</th>
+            <th scope="col">ADD TO CART</th>
+          </tr>
+        </thead>
+        <tr *ngFor="let bags of antiStaticBags" style="text-align: center;">
+          <td class="item align-middle">{{ bags.productNumber }}</td>
+          <td class="item align-middle">{{ bags.durability }}</td>
+          <td class="item align-middle">{{ bags.sizeWxL }}</td>
+          <td class="item align-middle">{{ bags.weight }}</td>
+          <td class="item align-middle">{{ bags.bagPerCase }}</td>
+          <td class="item align-middle">
+            <!--          <td>-->
+            <!--            <button>submit</button>-->
+            <!--          </td>-->
+            <input
+              class="productInput"
+              type="number"
+              name="quantity"
+              min="1"
+              max="10"
+            />
+            <button class="btn btn-primary" type="submit">ADD</button>
+          </td>
+        </tr>
+      </table>
     </div>
   </div>
-
-  <div class="card">
-    <div
-      class="card-header collapsed"
-      data-toggle="collapse"
-      data-target="#collapse2"
-      aria-controls="collapse2"
-      aria-expanded="false"
-      id="product2"
-    >
-      <h5>
-        <button
-          class="btn btn-link collapsed"
-          type="button"
-          data-toggle="collapse"
-          data-target="#collapse2"
-          aria-expanded="false"
-          aria-controls="collapse2"
-        >
-          CORRUGATED BOXES
-        </button>
-        <i
-          class="fas fa-chevron-right fa-2x float-right d-none d-md-block d-none d-md-block"
-        ></i>
-      </h5>
-    </div>
-    <div
-      id="collapse2"
-      class="collapse"
-      aria-labelledby="product2"
-      data-parent="#accordionProducts"
-    >
-      <div class="card-body">
-        <ul class="accordionNav__list list-group">
-          <li class="list-group-item"><a href="#">box stapler & staples</a></li>
-          <li class="list-group-item"><a href="#">corrugated boxes</a></li>
-          <li class="list-group-item">
-            <a href="#">corrugated bulk containers</a>
-          </li>
-          <li class="list-group-item"><a href="#">corrugated pads</a></li>
-          <li class="list-group-item"><a href="#">corrugated mailers</a></li>
-          <li class="list-group-item"><a href="#">easy fold boxes</a></li>
-          <li class="list-group-item"><a href="#">mailing tubes</a></li>
-        </ul>
-      </div>
-    </div>
-  </div>
-  <div class="card">
-    <div
-      class="card-header collapsed"
-      data-toggle="collapse"
-      data-target="#collapse3"
-      aria-controls="collapse3"
-      aria-expanded="false"
-      id="product3"
-    >
-      <h5>
-        <button
-          class="btn btn-link collapsed"
-          type="button"
-          data-toggle="collapse"
-          data-target="#collapse3"
-          aria-expanded="false"
-          aria-controls="collapse3"
-        >
-          CUSHIONING
-        </button>
-        <i class="fas fa-chevron-right fa-2x float-right d-none d-md-block"></i>
-      </h5>
-    </div>
-    <div
-      id="collapse3"
-      class="collapse"
-      aria-labelledby="product3"
-      data-parent="#accordionProducts"
-    >
-      <div class="card-body">
-        <ul class="accordionNav__list list-group">
-          <li class="list-group-item"><a href="#">bubble wrap</a></li>
-          <li class="list-group-item">
-            <a href="#">bubble wrap & foam dispenser</a>
-          </li>
-          <li class="list-group-item"><a href="#">cushioning foam</a></li>
-          <li class="list-group-item"><a href="#">kraft wrapping paper</a></li>
-          <li class="list-group-item"><a href="#">mini air system</a></li>
-          <li class="list-group-item">
-            <a href="#">newsprint wrapping paper</a>
-          </li>
-          <li class="list-group-item"><a href="#">packing peanuts</a></li>
-          <li class="list-group-item">
-            <a href="#">standard computer shipping foam </a>
-          </li>
-          <li class="list-group-item"><a href="#">tissue wrapping paper</a></li>
-          <li class="list-group-item">
-            <a href="#">wrapping paper dispenser</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </div>
-  <div class="card">
-    <div
-      class="card-header collapsed"
-      data-toggle="collapse"
-      data-target="#collapse4"
-      aria-controls="collapse4"
-      aria-expanded="false"
-      id="product4"
-    >
-      <h5 class="mb-0">
-        <button
-          class="btn btn-link collapsed"
-          type="button"
-          data-toggle="collapse"
-          data-target="#collapse4"
-          aria-expanded="false"
-          aria-controls="collapse4"
-        >
-          LABELS & ENVELOPES
-        </button>
-        <i class="fas fa-chevron-right fa-2x float-right d-none d-md-block"></i>
-      </h5>
-    </div>
-    <div
-      id="collapse4"
-      class="collapse"
-      aria-labelledby="product4"
-      data-parent="#accordionProducts"
-    >
-      <div class="card-body">
-        <ul class="accordionNav__list list-group">
-          <li class="list-group-item"><a href="#">circle mailing labels</a></li>
-          <li class="list-group-item"><a href="#">laser labels</a></li>
-          <li class="list-group-item">
-            <a href="#">packing list envelopes</a>
-          </li>
-          <li class="list-group-item">
-            <a href="#">shipping & handling labels</a>
-          </li>
-          <li class="list-group-item"><a href="#">thermal transfer</a></li>
-        </ul>
-      </div>
-    </div>
-  </div>
-  <div class="card">
-    <div
-      class="card-header collapsed"
-      data-toggle="collapse"
-      data-target="#collapse0"
-      aria-controls="collapse0"
-      aria-expanded="false"
-      id="product0"
-    >
-      <h5 class="mb-0">
-        <button
-          class="btn btn-link collapsed"
-          type="button"
-          data-toggle="collapse"
-          data-target="#collapse0"
-          aria-expanded="false"
-          aria-controls="collapse0"
-        >
-          MAILERS
-        </button>
-        <i class="fas fa-chevron-right fa-2x float-right d-none d-md-block"></i>
-      </h5>
-    </div>
-    <div
-      id="collapse0"
-      class="collapse"
-      aria-labelledby="product0"
-      data-parent="#accordionProducts"
-    >
-      <div class="card-body">
-        <ul class="accordionNav__list list-group">
-          <li class="list-group-item"><a href="#">kraft bubble</a></li>
-          <li class="list-group-item"><a href="#">poly bubble mailer</a></li>
-          <li class="list-group-item"><a href="#">poly mailer</a></li>
-        </ul>
-      </div>
-    </div>
-  </div>
-  <div class="card">
-    <div
-      class="card-header collapsed"
-      data-toggle="collapse"
-      data-target="#collapse5"
-      aria-controls="collapse5"
-      aria-expanded="false"
-      id="product5"
-    >
-      <h5 class="mb-0">
-        <button
-          class="btn btn-link collapsed"
-          type="button"
-          data-toggle="collapse"
-          data-target="#collapse5"
-          aria-expanded="false"
-          aria-controls="collapse5"
-        >
-          STRAPPING
-        </button>
-        <i class="fas fa-chevron-right fa-2x float-right d-none d-md-block"></i>
-      </h5>
-    </div>
-    <div
-      id="collapse5"
-      class="collapse"
-      aria-labelledby="product5"
-      data-parent="#accordionProducts"
-    >
-      <div class="card-body">
-        <ul class="accordionNav__list list-group">
-          <li class="list-group-item">
-            <a href="#">corrugated corner pads</a>
-          </li>
-          <li class="list-group-item"><a href="#">foam corner pads</a></li>
-          <li class="list-group-item"><a href="#">poly strapping</a></li>
-          <li class="list-group-item">
-            <a href="#">poly strapping machine</a>
-          </li>
-          <li class="list-group-item"><a href="#">poly strapping tools</a></li>
-          <li class="list-group-item"><a href="#">steel strapping</a></li>
-          <li class="list-group-item"><a href="#">v - boards</a></li>
-        </ul>
-      </div>
-    </div>
-  </div>
-  <div class="card">
-    <div
-      class="card-header collapsed"
-      data-toggle="collapse"
-      data-target="#collapse6"
-      aria-controls="collapse6"
-      aria-expanded="false"
-      id="product6"
-    >
-      <h5 class="mb-0">
-        <button
-          class="btn btn-link collapsed"
-          type="button"
-          data-toggle="collapse"
-          data-target="#collapse6"
-          aria-expanded="false"
-          aria-controls="collapse6"
-        >
-          STRETCH FILM
-        </button>
-        <i class="fas fa-chevron-right fa-2x float-right d-none d-md-block"></i>
-      </h5>
-    </div>
-    <div
-      id="collapse6"
-      class="collapse"
-      aria-labelledby="product6"
-      data-parent="#accordionProducts"
-    >
-      <div class="card-body">
-        <ul class="accordionNav__list list-group">
-          <li class="list-group-item"><a href="#">hand stretch wrap</a></li>
-          <li class="list-group-item"><a href="#">machine stretch wrap</a></li>
-          <li class="list-group-item"><a href="#">opaque stretch wrap</a></li>
-          <li class="list-group-item">
-            <a href="#">stretch wrap dispenser</a>
-          </li>
-          <li class="list-group-item">
-            <a href="#">stretch wrap machinery</a>
-          </li>
-          <li class="list-group-item"><a href="#">shrink wrap roll</a></li>
-          <li class="list-group-item"><a href="#">shrink wrap system</a></li>
-        </ul>
-      </div>
-    </div>
-  </div>
-  <div class="card">
-    <div
-      class="card-header collapsed"
-      data-toggle="collapse"
-      data-target="#collapse7"
-      aria-controls="collapse7"
-      aria-expanded="false"
-      id="product7"
-    >
-      <h5 class="mb-0">
-        <button
-          class="btn btn-link collapsed"
-          type="button"
-          data-toggle="collapse"
-          data-target="#collapse7"
-          aria-expanded="false"
-          aria-controls="collapse7"
-        >
-          TAPE
-        </button>
-        <i class="fas fa-chevron-right fa-2x float-right d-none d-md-block"></i>
-      </h5>
-    </div>
-    <div
-      id="collapse7"
-      class="collapse"
-      aria-labelledby="product7"
-      data-parent="#accordionProducts"
-    >
-      <div class="card-body">
-        <ul class="accordionNav__list list-group">
-          <li class="list-group-item"><a href="#">carton sealing tape</a></li>
-          <li class="list-group-item"><a href="#">colored tape</a></li>
-          <li class="list-group-item"><a href="#">custom print tape</a></li>
-          <li class="list-group-item"><a href="#">filament tape</a></li>
-          <li class="list-group-item"><a href="#">masking tape</a></li>
-          <li class="list-group-item">
-            <a href="#">office tape & dispenser</a>
-          </li>
-          <li class="list-group-item"><a href="#">tape dispenser</a></li>
-          <li class="list-group-item"><a href="#">vinyl tape </a></li>
-          <li class="list-group-item">
-            <a href="#">water-activated gummed tape</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </div>
-  <div class="card">
-    <div
-      class="card-header collapsed"
-      data-toggle="collapse"
-      data-target="#collapse8"
-      aria-controls="collapse8"
-      aria-expanded="false"
-      id="product8"
-    >
-      <h5 class="">
-        <button
-          class="btn btn-link collapsed"
-          type="button"
-          data-toggle="collapse"
-          data-target="#collapse8"
-          aria-expanded="false"
-          aria-controls="collapse8"
-        >
-          TOOLS & MACHINES
-        </button>
-        <i class="fas fa-chevron-right fa-2x float-right d-none d-md-block"></i>
-      </h5>
-    </div>
-    <div
-      id="collapse8"
-      class="collapse"
-      aria-labelledby="product8"
-      data-parent="#accordionProducts"
-    >
-      <div class="card-body">
-        <ul class="accordionNav__list list-group">
-          <li class="list-group-item"><a href="#">air pillow machine</a></li>
-          <li class="list-group-item"><a href="#">box stapler</a></li>
-          <li class="list-group-item"><a href="#">bubble wrap dispenser</a></li>
-          <li class="list-group-item"><a href="#">glue gun</a></li>
-          <li class="list-group-item"><a href="#">poly bag seali</a></li>
-          <li class="list-group-item">
-            <a href="#">newsprint wrapping paper</a>
-          </li>
-          <li class="list-group-item"><a href="#">packing peanuts</a></li>
-          <li class="list-group-item">
-            <a href="#">standard computer shipping foam </a>
-          </li>
-          <li class="list-group-item"><a href="#">tissue wrapping paper</a></li>
-          <li class="list-group-item">
-            <a href="#">wrapping paper dispenser</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </div>
-  <div class="card">
-    <div
-      class="card-header collapsed"
-      data-toggle="collapse"
-      data-target="#collapse9"
-      aria-controls="collapse9"
-      aria-expanded="false"
-      id="product9"
-      style="border-radius: 0 0 .5rem .5rem;"
-    >
-      <h5 class="">
-        <button
-          class="btn btn-link collapsed"
-          type="button"
-          data-toggle="collapse"
-          data-target="#collapse9"
-          aria-expanded="false"
-          aria-controls="collapse9"
-        >
-          MISC
-        </button>
-        <i class="fas fa-chevron-right fa-2x float-right d-none d-md-block"></i>
-      </h5>
-    </div>
-    <div
-      id="collapse9"
-      class="collapse"
-      aria-labelledby="product9"
-      data-parent="#accordionProducts"
-    >
-      <div class="card-body">
-        <ul class="accordionNav__list list-group">
-          <li class="list-group-item"><a href="#">cable ties</a></li>
-          <li class="list-group-item"><a href="#">dock board</a></li>
-          <li class="list-group-item"><a href="#">gloves & masks</a></li>
-          <li class="list-group-item"><a href="#">metal truck seal</a></li>
-          <li class="list-group-item"><a href="#">shipping scales</a></li>
-          <li class="list-group-item"><a href="#">twist ties</a></li>
-        </ul>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- END SIDE NAV-->
+</main>
