--- a/src/app/products/bags/clear-reclosable-bags/clear-reclosable-bags.component.html
+++ b/src/app/products/bags/clear-reclosable-bags/clear-reclosable-bags.component.html
@@ -1,3 +1,130 @@
-<p>
-  clear-reclosable-bags works!
-</p>
+<!--suppress ALL -->
+<main>
+  <div class="container">
+    <div class="row">
+      <div class="container mb-5 col-12 col-lg-6">
+        <div class="row justify-content-center">
+          <img
+            class="z-depth-1 rounded"
+            style="width: 405px; height: 405px;"
+            src="../../../../assets/img/clear-reclosable-bag.jpg"
+            alt="Anti Static Bag"
+            data-toggle="modal"
+            data-target="#basicExample"
+            (click)="frame.show()"
+            mdbWavesEffect
+          />
+          <div
+            mdbModal
+            #frame="mdbModal"
+            class="modal fade"
+            id="frameModalTop"
+            role="dialog"
+            aria-labelledby="myModalLabel"
+            aria-hidden="true"
+          >
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <!-- Image -->
+                <div class="modal-body d-flex justify-content-center">
+                  <img
+                    src="../../../../assets/img/clear-reclosable-bag.jpg"
+                    alt=""
+                  />
+                </div>
+                <!-- Button -->
+                <div class="modal-footer">
+                  <button
+                    type="button"
+                    mdbBtn
+                    color="primary"
+                    class="waves-light"
+                    mdbWavesEffect
+                    data-dismiss="modal"
+                    (click)="frame.hide()"
+                  >
+                    Close
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="card w-100 mb-5 col-12 col-lg-6">
+        <div class="card-body">
+          <h3 class="card-title">CLEAR RECLOSABLE BAG</h3>
+          <p class="card-text lead">
+            100% virgin polyethylene bags. Meets FDA and USDA specifications.
+          </p>
+          <p class="card-text lead">
+            <strong>Keep products clean:</strong>These bags provide total
+            protection from oil, dust, and moisture.
+          </p>
+          <p class="card-text lead">
+            <strong>Easy to use:</strong> Tough bags employ a reinforced
+            side-welded zipper to lock in single smooth motion.
+          </p>
+          <p class="card-text lead">
+            <strong>White Writing Block:</strong> available for customized
+            labeling.
+          </p>
+          <p class="card-text lead">
+            <strong>2 Mil:</strong> Most popular thickness for parts, clothing
+            and food.
+          </p>
+          <p class="card-text lead">
+            <strong>4 Mil:</strong> Heavier protection for industrial parts and
+            tools. Customized Reclosable Bags Available.
+          </p>
+          <p class="card-text lead">
+            <strong>Sizes:</strong> All of the product sizes are width x length
+            in inches.
+          </p>
+          <p class="card-text lead">
+            <strong>Weight:</strong> All of the product weight are in pounds per
+            1000 bags.
+          </p>
+        </div>
+      </div>
+      <table class="table table-striped table-hover">
+        <thead>
+          <tr
+            style="text-align: center; background-color: #0c4b7d; color: white;"
+          >
+            <th scope="col" style="padding-right: 0">PRODUCT #</th>
+            <th scope="col" style="padding-right: 2px;">DURABILITY</th>
+            <th scope="col" style="padding-left: 1px">SIZE W x L</th>
+            <th scope="col" style="padding-left: 1px">WEIGHT</th>
+            <th scope="col" style="padding-right: 2px">BAG/CASE</th>
+            <th scope="col">ADD TO CART</th>
+          </tr>
+        </thead>
+        <tr
+          *ngFor="let bags of clearReclosableBags"
+          style="text-align: center;"
+        >
+          <td class="item align-middle">{{ bags.productNumber }}</td>
+          <td class="item align-middle">{{ bags.durability }}</td>
+          <td class="item align-middle">{{ bags.sizeWxL }}</td>
+          <td class="item align-middle">{{ bags.weight }}</td>
+          <td class="item align-middle">{{ bags.bagPerCase }}</td>
+          <td class="item align-middle">
+            <!--          <td>-->
+            <!--            <button>submit</button>-->
+            <!--          </td>-->
+            <input
+              class="productInput"
+              type="number"
+              name="quantity"
+              min="1"
+              max="10"
+            />
+            <button class="btn btn-primary" type="submit">ADD</button>
+          </td>
+        </tr>
+      </table>
+    </div>
+  </div>
+</main>
