--- a/src/app/products/bags/poly-tubing/poly-tubing.component.html
+++ b/src/app/products/bags/poly-tubing/poly-tubing.component.html
@@ -1,3 +1,117 @@
-<p>
-  poly-tubing works!
-</p>
+<!--suppress ALL -->
+<main>
+  <div class="container">
+    <div class="row">
+      <div class="container mb-5 col-12 col-lg-6">
+        <div class="row justify-content-center">
+          <img
+            class="z-depth-1 rounded"
+            style="width: 405px; height: 405px;"
+            src="../../../../assets/img/poly-tubing.jpg"
+            alt="Poly Tubing"
+            data-toggle="modal"
+            data-target="#basicExample"
+            (click)="frame.show()"
+            mdbWavesEffect
+          />
+          <div
+            mdbModal
+            #frame="mdbModal"
+            class="modal fade"
+            id="frameModalTop"
+            role="dialog"
+            aria-labelledby="myModalLabel"
+            aria-hidden="true"
+          >
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <!-- Image -->
+                <div class="modal-body d-flex justify-content-center">
+                  <img src="../../../../assets/img/poly-tubing.jpg" alt="Poly Tubing" />
+                </div>
+                <!-- Button -->
+                <div class="modal-footer">
+                  <button
+                    type="button"
+                    mdbBtn
+                    color="primary"
+                    class="waves-light"
+                    mdbWavesEffect
+                    data-dismiss="modal"
+                    (click)="frame.hide()"
+                  >
+                    Close
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="card w-100 mb-5 col-12 col-lg-6">
+        <div class="card-body">
+          <h3 class="card-title">POLY TUBING</h3>
+          <p class="card-text lead">
+            <strong>Safe:</strong> Meets FDA & USDA Standards!
+          </p>
+          <p class="card-text lead">
+            <strong>Saves money!</strong>Eliminates the need to stock an
+            expensive variety of bags.
+          </p>
+          <p class="card-text lead">Seals with Poly Bag Sealers.</p>
+          <p class="card-text lead">Uses Poly Tubing Dispensers.</p>
+          <p class="card-text lead">
+            <strong>1 Mil</strong> – Lightweight protection for temporary storage.
+          </p>
+          <p class="card-text lead">
+            <strong>2 Mil</strong> – Most popular thickness for parts, clothing, and food.
+          </p>
+          <p class="card-text lead">
+            <strong>3 Mil</strong> – Added protection for parts and hardware.
+          </p>
+          <p class="card-text lead">
+            <strong>4 Mil</strong> – Heavier protection for industrial parts and tools.
+          </p>
+          <p class="card-text lead">
+            <strong>6 Mil</strong> – Superior strength & puncture-resistant feature.
+          </p>
+        </div>
+      </div>
+      <table class="table table-striped table-hover">
+        <thead>
+          <tr
+            style="text-align: center; background-color: #0c4b7d; color: white;"
+          >
+            <th scope="col" style="padding-right: 0">PRODUCT #</th>
+            <th scope="col" style="padding-right: 2px;">DURABILITY</th>
+            <th scope="col" style="padding-left: 1px">SIZE (Width)</th>
+            <th scope="col" style="padding-right: 2px">WEIGHT (LB)</th>
+            <th scope="col" style="padding-right: 2px">LENGTH (FT.)</th>
+            <th scope="col">ADD TO CART</th>
+          </tr>
+        </thead>
+        <tr *ngFor="let tube of polyTubing" style="text-align: center;">
+          <td class="item align-middle">{{ tube.productNumber }}</td>
+          <td class="item align-middle">{{ tube.durability }}</td>
+          <td class="item align-middle">{{ tube.sizeWidth }}</td>
+          <td class="item align-middle">{{ tube.weight }}</td>
+          <td class="item align-middle">{{ tube.length }}</td>
+          <td class="item align-middle">
+            <!--          <td>-->
+            <!--            <button>submit</button>-->
+            <!--          </td>-->
+            <input
+              class="productInput"
+              type="number"
+              name="quantity"
+              min="1"
+              max="10"
+            />
+            <button class="btn btn-primary" type="submit">ADD</button>
+          </td>
+        </tr>
+      </table>
+    </div>
+  </div>
+</main>
