--- a/src/app/products/bags/vacuum-bags/vacuum-bags.component.html
+++ b/src/app/products/bags/vacuum-bags/vacuum-bags.component.html
@@ -1,3 +1,139 @@
-<p>
-  vacuum-bags works!
-</p>
+<!--suppress ALL -->
+<main>
+  <div class="container">
+    <div class="row">
+      <div class="container mb-5 col-12 col-lg-6">
+        <div class="row justify-content-center">
+          <img
+            class="z-depth-1 rounded"
+            style="width: 405px; height: 405px;"
+            src="../../../../assets/img/vacuum-bag.jpg"
+            alt="Vacuum bag"
+            data-toggle="modal"
+            data-target="#basicExample"
+            (click)="frame.show()"
+            mdbWavesEffect
+          />
+          <div
+            mdbModal
+            #frame="mdbModal"
+            class="modal fade"
+            id="frameModalTop"
+            role="dialog"
+            aria-labelledby="myModalLabel"
+            aria-hidden="true"
+          >
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <!-- Image -->
+                <div class="modal-body d-flex justify-content-center">
+                  <img src="../../../../assets/img/vacuum-bag.jpg" alt="Vacuum bag" />
+                </div>
+                <!-- Button -->
+                <div class="modal-footer">
+                  <button
+                    type="button"
+                    mdbBtn
+                    color="primary"
+                    class="waves-light"
+                    mdbWavesEffect
+                    data-dismiss="modal"
+                    (click)="frame.hide()"
+                  >
+                    Close
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="card w-100 mb-5 col-12 col-lg-6">
+        <div class="card-body">
+          <h3 class="card-title">VACUUM BAG</h3>
+          <p class="card-text lead">
+            Our vacuum bags is perfect for shipping and storing food.
+          </p>
+          <p class="card-text lead">
+            Keeps shipments fresh for longer periods of time: Expels moisture and provides protection for your product.
+          </p>
+          <p class="card-text lead">
+            Follows all FDA/USDA regulations.
+          </p>
+
+        </div>
+      </div>
+
+      <h3 class="lead">VACUUM BAGS</h3>
+      <table class="table table-striped table-hover">
+        <thead>
+        <tr
+          style="text-align: center; background-color: #0c4b7d; color: white;"
+        >
+          <th scope="col" style="padding-right: 0">PRODUCT #</th>
+          <th scope="col" style="padding-right: 2px;">OUTSIDE DIM WxL</th>
+          <th scope="col" style="padding-left: 1px">STRENGTH</th>
+          <th scope="col" style="padding-right: 2px">BAG/CASE</th>
+          <th scope="col">ADD TO CART</th>
+        </tr>
+        </thead>
+        <tr *ngFor="let bag of vacuumBags" style="text-align: center;">
+          <td class="item align-middle">{{ bag.productNumber }}</td>
+          <td class="item align-middle">{{ bag.outsideDims }}</td>
+          <td class="item align-middle">{{ bag.strength }}</td>
+          <td class="item align-middle">{{ bag.bagsPerCase }}</td>
+          <td class="item align-middle">
+            <!--          <td>-->
+            <!--            <button>submit</button>-->
+            <!--          </td>-->
+            <input
+              class="productInput"
+              type="number"
+              name="quantity"
+              min="1"
+              max="10"
+            />
+            <button class="btn btn-primary" type="submit">ADD</button>
+          </td>
+        </tr>
+      </table>
+
+      <h3 class="lead">RECLOSABLE VACUUM BAGS</h3>
+      <table class="table table-striped table-hover">
+        <thead>
+        <tr
+          style="text-align: center; background-color: #0c4b7d; color: white;"
+        >
+          <th scope="col" style="padding-right: 0">PRODUCT #</th>
+          <th scope="col" style="padding-right: 2px;">OUTSIDE DIM WxL</th>
+          <th scope="col" style="padding-right: 2px;">INSIDE DIM WxL</th>
+          <th scope="col" style="padding-left: 1px">STRENGTH</th>
+          <th scope="col" style="padding-right: 2px">BAG/CASE</th>
+          <th scope="col">ADD TO CART</th>
+        </tr>
+        </thead>
+        <tr *ngFor="let bag of reclosableVacuumBags" style="text-align: center;">
+          <td class="item align-middle">{{ bag.productNumber }}</td>
+          <td class="item align-middle">{{ bag.outsideDims }}</td>
+          <td class="item align-middle">{{ bag.insideDims }}</td>
+          <td class="item align-middle">{{ bag.strength }}</td>
+          <td class="item align-middle">{{ bag.bagsPerCase }}</td>
+          <td class="item align-middle">
+            <!--          <td>-->
+            <!--            <button>submit</button>-->
+            <!--          </td>-->
+            <input
+              class="productInput"
+              type="number"
+              name="quantity"
+              min="1"
+              max="10"
+            />
+            <button class="btn btn-primary" type="submit">ADD</button>
+          </td>
+        </tr>
+      </table>
+    </div>
+  </div>
+</main>
